--- a/gcp/cloudskillsboost/labs/GSP093.md
+++ b/gcp/cloudskillsboost/labs/GSP093.md
@@ -1,24 +1,24 @@
-# Compute Engine: Qwik Start - Windows
-## 概览
+# Compute Engine: Qwik Start - Windows (GSP093)
+# 概览
 在本实操实验中，您将学习如何在 Compute Engine 中启动 Windows Server 实例，并使用远程桌面协议 (RDP) 连接到该实例。
 
-## 设置和要求
+# 设置和要求
 略
 
-## 创建虚拟机实例
+# 创建虚拟机实例
 略
 
-## 通过远程桌面协议 (RDP) 连接到 Windows Server
+# 通过远程桌面协议 (RDP) 连接到 Windows Server
 略
 
-## 测试 Windows 启动的状态
+# 测试 Windows 启动的状态
 略
 
-## 使用 RDP 客户端复制和粘贴
+# 使用 RDP 客户端复制和粘贴
 略
 
-## 检验您的掌握情况
+# 检验您的掌握情况
 略
 
-## 恭喜！
+# 恭喜！
 略
