--- a/gcp/cloudskillsboost/labs/393747.md
+++ b/gcp/cloudskillsboost/labs/393747.md
@@ -18,10 +18,10 @@
 略
 
 # 任务 4.探索更多 Cloud Shell 特性
-介绍了如何上次文件
+介绍了如何上传文件
 
 # 任务 5.在 Cloud Shell 中创建持久状态
-接受了使用 *source* 命令和配置 *./profile* 文件
+介绍了使用 *source* 命令和配置 *./profile* 文件
 
 # 任务 6.查看 Google Cloud 界面
 略
