--- a/gcp/cloudskillsboost/labs/386342.md
+++ b/gcp/cloudskillsboost/labs/386342.md
@@ -33,7 +33,8 @@
 * 在 Cloud VPN 网关上创建高可用性 VPN 隧道
 
 # 任务 5. 为每个隧道创建边界网关协议 (BGP) 对等互联
-略
+> 边界网关协议（Border Gateway Protocol，BGP）是一种路由协议，通常用于互联网中的路由器之间进行路由信息交换。
+> BGP 是一种路径矢量协议，用于确定数据包应该如何在互联网中传播，以确保数据包从源路由器到达目标路由器。
 
 # 任务 6. 验证路由器配置
 * 验证两个 VPC 中的路由器配置。配置防火墙规则以允许各个 VPC 之间传递流量，并验证隧道的状态。您还要验证各个 VPC 之间的 VPN 专用连接，并为 VPC 启用全局路由模式。
