--- a/Microsoft/credentials/MS-900/MS-900.md
+++ b/Microsoft/credentials/MS-900/MS-900.md
@@ -1,3 +1,5 @@
 ## [考试指南](https://learn.microsoft.com/zh-cn/credentials/certifications/resources/study-guides/ms-900)
 
 ## [课程 MS-900T01-A](https://learn.microsoft.com/zh-cn/training/courses/ms-900t01)
+
+## [面向 Microsoft 365 的 Microsoft Learn](https://learn.microsoft.com/zh-cn/training/m365/)
